# finishing-line

./: .gitattributes  .gitignore  CLAUDE.md  README.md  cell-config.yaml  default.installation  default.variables  docker-compose.ursim.yml  line-config.yaml  modbustest.ino  modbustest.urp  platformio.ini  pyproject.toml
docs/: commissioning.md  finishing-line-state-machine.md  hardware.md  legacy-mod-choreography.md  simulation.md
firmware/: README.md
firmware/finishing_line/: finishing_line.ino  firmware.cpp  firmware.h  io_map.h  (+4 more)
programs/: 24 pallet.old0  24 pallet.old1  24 pallet.old2  24 pallet.script  24 pallet.txt  24.old0  24.old1  24.old2  24.old3  24.old4  24.old5  24.old8  24.old9  24.script  24.txt  24force.old0  24force.old1  24force.old2  24force.old3  24force.old4  24force.old5  24force.old6  24force.old7  24force.old8  24force.script  24force.txt  24glue.old0  24glue.old2  24glue.old3  24glue.old4  24glue.old5  24glue.old6  24glue.old7  24glue.old8  24glue.script  24glue.txt  24sub.txt  Adv Mod1.old0  Adv Mod1.script  Adv Mod1.txt  (+284 more)
scripts/: choreography_poc.py  handoff_test.py  line_monitor.py  rtde_smoke.py  sensor_watch.py  ursim_smoke.py
tests/: conftest.py  test_api.py  test_clearcore_client.py  test_config.py  test_drain.py  test_executor.py  test_fake_clearcore.py  test_guards.py  test_gun_clean.py  test_legacy_clearcore.py  test_legacy_sequencer.py  test_line_sim.py  test_pairing.py  test_persistence.py  test_recovery.py  test_sander.py  test_schedule.py  test_sprayer.py  test_stage_b_integration.py  test_timers.py  test_ur_dashboard.py
(+322 files in other folders)
