[project]
name = "finishing-line"
version = "0.1.0"
description = "Cell controller for the Simple Wood Goods automated finishing line"
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Device drivers are optional so the core package and simulator can be
# installed and tested on any machine, including CI with no hardware.
devices = [
    "ur-rtde>=1.5.6",
    "pymodbus>=3.6",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Client only, for tests/test_fake_clearcore.py — the fake server itself is
    # stdlib. Same library the real ClearCoreClient driver uses.
    "pymodbus>=3.6,<4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
